@startuml user-management-class
class User {
  -email: String
  -password: String
  -role: Object
}

class Profile {
  -user: Object
  -name: Object
  -contact: Object
  -address: Object
  -cv: Boolean
}

User -- Profile: "1" -- "1"

class AuthController {
  +login(user): void
}

class UserController {
  +getUser(user): Profile
  +registerUser(user): void
  +updateUser(user): Profile
  +removeUser(user): void
}

AuthController ..> User: uses
UserController ..> Profile: uses

@enduml
